style.css
:root {
    /* --identifier: value; */
    --my-font-family: Google Sans, Roboto, Helvetica, Arial, sans-serif;
    --button-font-family: arial, sans-serif;
    --theme-color: yellow;
    --link-text-color: #000000DE;
}


* {
    box-sizing: border-box;
}

body {
    font-size: 14px;
    font-family: arial, sans-serif;

}

header #top-container {
    width: 100%;
    display: flex;
    justify-content: end;
    align-items: center;
    padding: 10px;
    font-family: var(--my-font-family);

    user-select: none;
}

#images-link:hover {
    text-decoration: underline;
}

#gmail-link:hover {
    text-decoration: underline;

}

#top-container a {
    /*remove underline*/
    text-decoration: none;
    /*color: black;*/
}

#gmail-link, #images-link {
    color: var(--link-text-color);
}


#top-container * {
    padding: 10px;
}

#sign-in-button {
    width: 96px;
    height: 36px;
    font-family: var(--my-font-family);
    font-weight: 500;
    /*font-size: 14px;*/
    letter-spacing: .25px;
    line-height: 16px;
    margin-left: 10px;
    margin-right: 8px;
    min-width: 80px;
    padding: 9px 23px;
    text-align: center;
    vertical-align: middle;
    border-radius: 4px;
    color: white;
    background-color: #1A73E8;

    border: none;

    &:hover {
        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;


    }


}

#sign-in-button a {
    text-align: center;
    vertical-align: middle;
    color: white;
}

#google-logo-container {
    height: 125px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: end;
}

#search-bar-container {
    display: flex;
    /*z-index: 3;*/
    position: relative;
    min-height: 44px;
    background: #fff;
    border: 1px solid #dfe1e5;
    box-shadow: none;
    border-radius: 24px;
    margin: 0 auto;
    height: 46px;
    /*width: 638px;*/
    width: auto;
    max-width: 584px;

    align-items: center;

    &:hover {
        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;

    }

    input {
        /*general siblings mic and camera svgs*/

        ~ svg {
            width: 24px;
            height: 24px;
        }
    }

    svg {
        /*to change colour of the lens*/

        &:first-child {
            fill: gray;
            width: 20px;
            height: 20px;
        }


    }
}

#search-bar-container * {
    margin: 5px;
}

#button-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#lucky-button {
    a {
        color: #3c4043;
    }


}

#search-button, #lucky-button {
    background-color: #f8f9fa;
    border: 1px solid #f8f9fa;
    border-radius: 4px;
    color: #3c4043;
    font-family: var(--button-font-family);
    /*font-size: 14px;*/
    margin: 11px 4px;
    padding: 0 16px;
    line-height: 27px;
    height: 36px;
    min-width: 142.5px;
    text-align: center;
    cursor: pointer;
    user-select: none;

    &:hover {
        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    }
}


#button-container a {
    text-decoration: none;
}

form {
    margin-top: 20px;
    /*display: flex;*/
    /*flex-direction: column;*/
    text-align: center;
    /*height: 144px;*/

    #textinput {
        /*height: 40px;*/
        margin-bottom: 30px;
        /*width: 50%;*/
        border-radius: 30px;
        font-size: 16px;
        /*border: lightgray solid 0.3px;*/
        border: none;
        outline: none;
        display: flex;
        /*z-index: 3;*/
        position: relative;
        min-height: 44px;
        background: #fff;
        /*border: 1px solid #dfe1e5;*/
        box-shadow: none;
        /*border-radius: 24px;*/
        margin: 0 auto;
        /*width: 638px;*/
        width: auto;
        width: 100%;
        /*max-width: 584px;*/
    }

}

#language-div {
    width: 100%;
    text-align: center;
    font-size: 13px;
    color: #4d5156;
    display: inline-block;
    line-height: 28px;

    height: 152px;
    flex-grow: 1;

    a {
        text-decoration: none;
    }

    a:hover {
        text-decoration: underline;
    }
}

footer {
    /*position: absolute;*/

    color: var(--link-text-color);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    background-color: #f7f8f9;
    align-items: center;
    min-height: 46px;
    font-size: 15px;
    /*padding: 15px;*/
    margin: 0;

    width: 100%;

    div {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 15px;

        a {
            padding-left: 15px;
            padding-right: 15px;
            text-decoration: none;
            color: var(--link-text-color);
        }

        a:hover {
            text-decoration: underline;
        }
    }
}

#sri-lanka-footer {
    padding: 15px 30px;
    border-bottom: 1px solid #dadce0;
    /*font-size: 15px;*/
    /*color: black;*/
    /*display: flex;*/
    /*flex-wrap: wrap;*/
    /*justify-content: space-between;*/
    height: 48px;

}

